# guaardvark

./: .gitignore  :memory:-shm  :memory:-wal  CAPABILITIES.md  CLAUDE.md  CONTRIBUTING.md  Containerfile.test  GEMINI.md  INSTALL.md  KNOWN_BUGS.md  README.md  README.md.bak.20260317075121  README_zh.md  SESSION_HANDOFF-THEME_UPDATE.md  SESSION_SUMMARY_voice-and-video.md  VENV_CLEANUP_CONSOLIDATION.md  cursor_servo_diagnosis.md  guaardvark_backup.json  patch_continuous.py  patch_continuous2.py  patch_continuous_assets.py  patch_continuous_fix.py  patch_earcons.py  patch_vite_config.py  patch_voiceService.py  patch_voice_api.py  pyrightconfig.json  pytest.ini  run_tests.py  start.sh  start_celery.sh  start_postgres.sh  start_redis.sh  stop.sh  test-container.sh
.claude/: settings.local.json
.github/: FUNDING.yml
backend/: app.py  celery_app.py  celery_tasks_isolated.py  config.py  cuda_config.py  cuda_config.py.bak.20260317075000  models.py  requirements-base.txt  requirements.txt  rule_utils.py  seed_data.py  seed_models.py  socketio_events.py  socketio_instance.py
cli/: setup.py
data/: active_model.json  code_editor_session.json  code_editor_state.json  dashboard_state.json  docstore.json  documents_windows_v2_state.json  images_windows_state.json  index_store.json  rag_experiment_config.json  research_program.md
discord_bot/: bot.py
docs/: SESSION_HANDOFF.md  (+6 more)
libs/guaardvark-guardian/: LICENSE  README.md  pyproject.toml
libs/guaardvark-guardian/src/guaardvark_guardian/: __init__.py  guardian.py  types.py
libs/guaardvark-guardian/tests/: test_guardian.py
(+976 files in other folders)
