[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guaardvark-guardian"
version = "0.1.0"
description = "Three-tier Claude supervision architecture for autonomous AI systems"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Albenze AI Solutions", email = "dev@guaardvark.com"},
]
keywords = ["claude", "anthropic", "ai-safety", "guardian", "autonomous-agents", "code-review"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic>=0.39.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.urls]
Homepage = "https://guaardvark.com"
Repository = "https://github.com/albenze/guaardvark-guardian"
Issues = "https://github.com/albenze/guaardvark-guardian/issues"

[tool.setuptools.packages.find]
where = ["src"]
